[package]
name = "assay"
version = "0.1.0"
description = "Assay desktop app"
authors = ["Assay Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_yaml = "0.9"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
